Probability and binomial distribution

--- a/Fundamentals.ipynb
+++ b/Fundamentals.ipynb
@@ -6,7 +6,7 @@
       "name": "Cópia de Fundamentals.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMmzzjrX2Za3K1p15KTfsmE",
+      "authorship_tag": "ABX9TyNv5b5J1hDkBlhXw1EAjEVO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5372,6 +5372,44 @@
           },
           "metadata": {},
           "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Probability and binomial distribution\n",
+        "import math\n",
+        "from scipy.stats import binom\n",
+        "\n",
+        "#Throwing a coin exempale (Have heads in 10 trials)\n",
+        "n = 10 #trails\n",
+        "x = 5 #success rate\n",
+        "p = 0.5 #probability of heads\n",
+        "\n",
+        "(math.factorial(n)) / (math.factorial(x) * math.factorial(n - x)) * math.pow(p,x) * math.pow(1-p, n - x) #0.24609375\n",
+        "\n",
+        "#using stats\n",
+        "scipy.stats.binom.pmf(x, n, p) #0.24609375000000003"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "DJbFqCt8z7t2",
+        "outputId": "0ad01223-3c61-4693-8a25-dc6c5757d22e"
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.24609375000000003"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 27
         }
       ]
     }
