Probability and Poisson

--- a/Fundamentals.ipynb
+++ b/Fundamentals.ipynb
@@ -6,7 +6,7 @@
       "name": "Cópia de Fundamentals.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNv5b5J1hDkBlhXw1EAjEVO",
+      "authorship_tag": "ABX9TyM/Oae4hoSqgh6S6OxZCmEm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5397,9 +5397,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DJbFqCt8z7t2",
-        "outputId": "0ad01223-3c61-4693-8a25-dc6c5757d22e"
+        "outputId": "b15bf2be-3a38-45d4-eb3d-ca5f05fa41ff"
       },
-      "execution_count": 27,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5409,9 +5409,56 @@
             ]
           },
           "metadata": {},
-          "execution_count": 27
+          "execution_count": 35
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Probability and Poisson\n",
+        "import math\n",
+        "from scipy.stats import poisson\n",
+        "\n",
+        "#Example: The mean of sold cars is 10. What is the probability of selling 14 cars tomorrow\n",
+        "x = 14\n",
+        "mean = 10\n",
+        "\n",
+        "math.pow(math.e, -mean) * (math.pow(mean, x) / math.factorial(x)) # 0.05207710444602621\n",
+        "\n",
+        "poisson.pmf(x, mean) #0.05207710444602615"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CfwkJ58q3nH-",
+        "outputId": "ad7a7327-f1b4-4f12-9470-f1c10301b4c3"
+      },
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.05207710444602615"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 36
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "7SMMuwUUA0w-"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
