--- a/Fundamentals.ipynb
+++ b/Fundamentals.ipynb
@@ -6,7 +6,7 @@
       "name": "Cópia de Fundamentals.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyM/Oae4hoSqgh6S6OxZCmEm",
+      "authorship_tag": "ABX9TyMPZb1nDDhJWuITyTxL5Nex",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5361,7 +5361,7 @@
         },
         "outputId": "1f187874-e7a0-4d08-c601-f64cbe8ec4df"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5399,7 +5399,7 @@
         "id": "DJbFqCt8z7t2",
         "outputId": "b15bf2be-3a38-45d4-eb3d-ca5f05fa41ff"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5435,7 +5435,7 @@
         "id": "CfwkJ58q3nH-",
         "outputId": "ad7a7327-f1b4-4f12-9470-f1c10301b4c3"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5452,13 +5452,63 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "#Confidence interval\n",
+        "import math\n",
+        "import numpy as np\n",
+        "import seaborn as sns\n",
+        "from scipy.stats import norm\n",
+        "from scipy import stats\n",
+        "\n",
+        "#The height of a group of people\n",
+        "data = np.array([126. , 129.5, 133. , 133. , 136.5, 136.5, 140. , 140. , 140. ,\n",
+        "                  140. , 143.5, 143.5, 143.5, 143.5, 143.5, 143.5, 147. , 147. ,\n",
+        "                  147. , 147. , 147. , 147. , 147. , 150.5, 150.5, 150.5, 150.5,\n",
+        "                  150.5, 150.5, 150.5, 150.5, 154. , 154. , 154. , 154. , 154. ,\n",
+        "                  154. , 154. , 154. , 154. , 157.5, 157.5, 157.5, 157.5, 157.5,\n",
+        "                  157.5, 157.5, 157.5, 157.5, 157.5, 161. , 161. , 161. , 161. ,\n",
+        "                  161. , 161. , 161. , 161. , 161. , 161. , 164.5, 164.5, 164.5,\n",
+        "                  164.5, 164.5, 164.5, 164.5, 164.5, 164.5, 168. , 168. , 168. ,\n",
+        "                  168. , 168. , 168. , 168. , 168. , 171.5, 171.5, 171.5, 171.5,\n",
+        "                  171.5, 171.5, 171.5, 175. , 175. , 175. , 175. , 175. , 175. ,\n",
+        "                  178.5, 178.5, 178.5, 178.5, 182. , 182. , 185.5, 185.5, 189., 192.5])\n",
+        "\n",
+        "n = len(data) #100\n",
+        "mean = np.mean(data) #159.25\n",
+        "standard_deviation = np.std(data) #13.65\n",
+        "alpha = 0.05/2 # (1 - 0.95) / 2 = 0.025\n",
+        "z = norm.ppf(1 - alpha) # 1.9599...54\n",
+        "\n",
+        "lower_x = mean - z * (standard_deviation/math.sqrt(n)) #156.574...83\n",
+        "upper_x = mean + z * (standard_deviation/math.sqrt(n)) #161.925...17\n",
+        "\n",
+        "margin_error = abs(mean - upper_x) #2.675...74\n",
+        "\n",
+        "#sns.displot(data);\n",
+        "\n",
+        "#Using scipy\n",
+        "intervals = norm.interval(0.95, mean, stats.sem(data))# (156.5611712378229, 161.9388287621771)\n",
+        "margin_error = mean - intervals[0] #2.68882876217711\n"
       ],
       "metadata": {
-        "id": "7SMMuwUUA0w-"
+        "id": "7SMMuwUUA0w-",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9b0257c2-8661-4b53-aaa7-4c9a20016b56"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2.68882876217711"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
     }
   ]
 }
