--- a/Fundamentals.ipynb
+++ b/Fundamentals.ipynb
@@ -3,10 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Cópia de Fundamentals.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMPZb1nDDhJWuITyTxL5Nex",
+      "authorship_tag": "ABX9TyNJsLMBwNtR2WpARVjNKh2/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5496,7 +5495,7 @@
         },
         "outputId": "9b0257c2-8661-4b53-aaa7-4c9a20016b56"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5507,6 +5506,43 @@
           },
           "metadata": {},
           "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#T-student\n",
+        "import numpy as np\n",
+        "from scipy import stats\n",
+        "from scipy.stats import t\n",
+        "\n",
+        "data = np.array([149., 160., 147., 189., 175., 168., 156., 160., 152.])\n",
+        "\n",
+        "n = len(data) #9\n",
+        "mean = data.mean() #161.777..77\n",
+        "standard_deviation = np.std(data) #12.7869...823\n",
+        "data_interval = t.interval(0.95, n - 1, mean, stats.sem(data, ddof = 0)) # 151.9488554388298, 171.60670011672573\n",
+        "margin_error = mean - data_interval[0] # 9.828922338947962\n"
+      ],
+      "metadata": {
+        "id": "MUoGLKYu5HED",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "cbba5a40-c5ca-42d7-a949-730f40159e3e"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "9.828922338947962"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
         }
       ]
     }
