Interval and classification

--- a/Fundamentals.ipynb
+++ b/Fundamentals.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNJsLMBwNtR2WpARVjNKh2/",
+      "authorship_tag": "ABX9TyMH4c0uOsifmc8h2T6P0ZrX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5545,6 +5545,97 @@
           "execution_count": 3
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Interval and classification\n",
+        "import numpy as np\n",
+        "from scipy.stats import t\n",
+        "from scipy.stats import norm\n",
+        "import pandas as pd\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.naive_bayes import GaussianNB\n",
+        "from sklearn.linear_model import LogisticRegression\n",
+        "from sklearn.ensemble import RandomForestClassifier\n",
+        "from sklearn.metrics import accuracy_score\n",
+        "from sklearn.model_selection import cross_val_score, KFold\n",
+        "\n",
+        "dataset = pd.read_csv('credit_data.csv')\n",
+        "dataset.dropna(inplace=True)\n",
+        "\n",
+        "X = dataset.iloc[:, 1:4].values\n",
+        "y = dataset.iloc[:, 4]\n",
+        "\n",
+        "result_naive_bayes_cv = []\n",
+        "result_naive_bayes_cv_300 = []\n",
+        "result_logistic_cv = []\n",
+        "result_logistic_cv_300 = []\n",
+        "result_forest_cv = []\n",
+        "result_forest_cv_300 = []\n",
+        "\n",
+        "for i in range(30): # 30 tests\n",
+        "  kfold = KFold(n_splits = 10, shuffle = True, random_state = i)\n",
+        "\n",
+        "  naive_bayes = GaussianNB()\n",
+        "  scores = cross_val_score(naive_bayes, X, y, cv = kfold)\n",
+        "  result_naive_bayes_cv_300.append(scores)\n",
+        "  result_naive_bayes_cv.append(scores.mean())\n",
+        "\n",
+        "  logistic = LogisticRegression()\n",
+        "  scores = cross_val_score(logistic, X, y, cv = kfold)\n",
+        "  result_logistic_cv_300.append(scores)\n",
+        "  result_logistic_cv.append(scores.mean())\n",
+        "\n",
+        "  random_forest = RandomForestClassifier()\n",
+        "  scores = cross_val_score(random_forest, X, y, cv = kfold)\n",
+        "  result_forest_cv_300.append(scores)\n",
+        "  result_forest_cv.append(scores.mean())\n",
+        "\n",
+        "#List to array\n",
+        "result_naive_bayes_cv = np.array(result_naive_bayes_cv)\n",
+        "result_naive_bayes_cv_300 = np.array(np.asarray(result_naive_bayes_cv_300).reshape(-1))\n",
+        "result_logistic_cv = np.array(result_logistic_cv)\n",
+        "result_logistic_cv_300 = np.array(np.asarray(result_logistic_cv_300).reshape(-1))\n",
+        "result_forest_cv = np.array(result_forest_cv)\n",
+        "result_forest_cv_300 = np.array(np.asarray(result_forest_cv_300).reshape(-1))\n",
+        "\n",
+        "interval_naive_bayes_t = t.interval(0.95, len(result_naive_bayes_cv) - 1, \n",
+        "                                    result_naive_bayes_cv.mean(),\n",
+        "                                    stats.sem(result_naive_bayes_cv, ddof = 0))\n",
+        "\n",
+        "interval_naive_bayes_n = norm.interval(0.95, result_naive_bayes_cv_300.mean(),\n",
+        "                                       stats.sem(result_naive_bayes_cv_300))\n",
+        "\n",
+        "interval_logistic_t = t.interval(0.95, len(result_logistic_cv) -1 , \n",
+        "                                 result_logistic_cv.mean(),\n",
+        "                                 stats.sem(result_logistic_cv, ddof = 0))\n",
+        "\n",
+        "interval_logistic_n = norm.interval(0.95, result_logistic_cv_300.mean(),\n",
+        "                                    stats.sem(result_logistic_cv_300))\n",
+        "\n",
+        "interval_forest_t = t.interval(0.95, len(result_forest_cv) - 1,\n",
+        "                               result_forest_cv.mean(),\n",
+        "                               stats.sem(result_forest_cv, ddof = 0))\n",
+        "\n",
+        "interval_forrest_n = norm.interval(0.95, result_forest_cv_300.mean(),\n",
+        "                                   stats.sem(result_forest_cv_300))\n",
+        "\n",
+        "\n",
+        "margin_error_naive_bayes_t = abs(result_naive_bayes_cv.mean() - interval_naive_bayes_t[1]) # 0.00029844...324\n",
+        "margin_error_naive_bayes_n = abs(result_naive_bayes_cv_300.mean() - interval_naive_bayes_n[1]) # 0.00200...266\n",
+        "\n",
+        "margin_error_logistic_t = abs(result_logistic_cv.mean() - interval_logistic_t[1]) # 0.0013239364476194115\n",
+        "margin_error_logistic_n = abs(result_logistic_cv_300.mean() - interval_logistic_n[1]) # 0.0023624760415116297\n",
+        "\n",
+        "margin_error_forrest_t = abs(result_forest_cv.mean() - interval_forest_t[1]) # 0.0006424484283970022\n",
+        "margin_error_forrest_n = abs(result_forest_cv_300.mean() - interval_forrest_n[1]) # 0.000871079857025836"
+      ],
+      "metadata": {
+        "id": "480e_z4h-iYT"
+      },
+      "execution_count": 5,
+      "outputs": []
     }
   ]
 }
