Hypothesis test and Test of hypothesis T

--- a/Fundamentals.ipynb
+++ b/Fundamentals.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMH4c0uOsifmc8h2T6P0ZrX",
+      "authorship_tag": "ABX9TyPglNh5ZnDhPHuxVze7IxDU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5532,7 +5532,7 @@
         },
         "outputId": "cbba5a40-c5ca-42d7-a949-730f40159e3e"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5634,8 +5634,108 @@
       "metadata": {
         "id": "480e_z4h-iYT"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Hypothesis test and Test of hypothesis T\n",
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "import math\n",
+        "from scipy.stats import norm\n",
+        "\n",
+        "data =  np.array([126. , 129.5, 133. , 133. , 136.5, 136.5, 140. , 140. , 140. ,\n",
+        "                            140. , 143.5, 143.5, 143.5, 143.5, 143.5, 143.5, 147. , 147. ,\n",
+        "                            147. , 147. , 147. , 147. , 147. , 150.5, 150.5, 150.5, 150.5,\n",
+        "                            150.5, 150.5, 150.5, 150.5, 154. , 154. , 154. , 154. , 154. ,\n",
+        "                            154. , 154. , 154. , 154. , 157.5, 157.5, 157.5, 157.5, 157.5,\n",
+        "                            157.5, 157.5, 157.5, 157.5, 157.5, 161. , 161. , 161. , 161. ,\n",
+        "                            161. , 161. , 161. , 161. , 161. , 161. , 164.5, 164.5, 164.5,\n",
+        "                            164.5, 164.5, 164.5, 164.5, 164.5, 164.5, 168. , 168. , 168. ,\n",
+        "                            168. , 168. , 168. , 168. , 168. , 171.5, 171.5, 171.5, 171.5,\n",
+        "                            171.5, 171.5, 171.5, 175. , 175. , 175. , 175. , 175. , 175. ,\n",
+        "                            178.5, 178.5, 178.5, 178.5, 182. , 182. , 185.5, 185.5, 189., 192.5])\n",
+        "\n",
+        "#Mean of the null hypothesis\n",
+        "H0_mean = np.mean(data) # 159.25\n",
+        "\n",
+        "#Standard deviation of the null hypothesis\n",
+        "H0_standard_deviation = np.std(data) #13.65\n",
+        "\n",
+        "#The data changed by  1.03 in another research made in a year of difference\n",
+        "new_data = data * 1.03\n",
+        "\n",
+        "#Testing the hypothesis in the new data\n",
+        "H1_mean = np.mean(new_data) # 164.0275\n",
+        "\n",
+        "H1_standard_deviation = np.std(new_data) # 14.0595\n",
+        "\n",
+        "#Length of new data\n",
+        "H1_n = len(new_data) # 100\n",
+        "\n",
+        "alpha = 0.05\n",
+        "\n",
+        "Z = (H1_mean - H0_mean) / (H1_standard_deviation / math.sqrt(H1_n)) # 3.398058252427187\n",
+        "\n",
+        "#Checking the z-table\n",
+        "norm.cdf(3.398058252427187), norm.ppf(0.9996606701617486) # 3.398058252427187, 3.3980582524271936\n",
+        "\n",
+        "#The final value of Z\n",
+        "Z = norm.cdf(Z) # 0.9996606701617486\n",
+        "\n",
+        "#The right side of normal distribution\n",
+        "p = 1 - Z # 0.000339329838251356554\n",
+        "\n",
+        "#Testing the hypothesis\n",
+        "if p < alpha:\n",
+        "  print('Null hypothesis rejected')\n",
+        "else:\n",
+        "  print('Alternative hypothesis rejected')\n",
+        "\n",
+        "#Test with statsmodels\n",
+        "from statsmodels.stats.weightstats import ztest\n",
+        "\n",
+        "#We wanna the p-value \n",
+        "_, p = ztest(data, new_data,\n",
+        "             value = H1_mean - H0_mean,\n",
+        "             alternative='larger') # p = 0.9999993877283934\n",
+        "\n",
+        "#Test of hypothesis T\n",
+        "data = np.array([149. , 160., 147., 189., 175., 168., 156., 160., 152.])\n",
+        "\n",
+        "new_data = data * 1.02\n",
+        "\n",
+        "from scipy.stats import ttest_rel\n",
+        "\n",
+        "_, p = ttest_rel(data, new_data)\n",
+        "\n",
+        "alpha = 0.01\n",
+        "\n",
+        "if p <= alpha:\n",
+        "  print('Null hypothesis rejected')\n",
+        "else:\n",
+        "  print('Alternative hypothesis rejected')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3ETJJKESQAjB",
+        "outputId": "64e19738-6a7d-4d14-b32b-84dbc8495bce"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Null hypothesis rejected\n",
+            "Null hypothesis rejected\n"
+          ]
+        }
+      ]
     }
   ]
 }
