--- a/Fundamentals.ipynb
+++ b/Fundamentals.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPglNh5ZnDhPHuxVze7IxDU",
+      "authorship_tag": "ABX9TyOMJ4k3ZGcYx6BUD2quhP/z",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5736,6 +5736,31 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#chi-square\n",
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "import math\n",
+        "from scipy.stats import chi2_contingency\n",
+        "\n",
+        "table = np.array([[30, 22], [20, 28]])\n",
+        "\n",
+        "_, p, _, _ = chi2_contingency(table)\n",
+        "\n",
+        "alpha = 0.05\n",
+        "if p <= alpha:\n",
+        "  print('Null hypothesis rejected')\n",
+        "else:\n",
+        "  print('Alternative hypothesis rejected')"
+      ],
+      "metadata": {
+        "id": "I2vQS-fAcVcY"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
