Selection of attributes with hypothesis tests

--- a/Fundamentals.ipynb
+++ b/Fundamentals.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOMJ4k3ZGcYx6BUD2quhP/z",
+      "authorship_tag": "ABX9TyM5pHwkapEck57GOuHSWBJ8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5758,6 +5758,75 @@
       ],
       "metadata": {
         "id": "I2vQS-fAcVcY"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Selection of attributes with hypothesis tests\n",
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "from sklearn.feature_selection import SelectFdr\n",
+        "from sklearn.feature_selection import chi2\n",
+        "from sklearn.naive_bayes import GaussianNB\n",
+        "from sklearn.metrics import accuracy_score\n",
+        "\n",
+        "dataset = pd.read_csv('ad.data', header=None)\n",
+        "\n",
+        "#dataset.shape # (3279, 1559)\n",
+        "\n",
+        "#Splitting the data\n",
+        "X = dataset.iloc[:, 0:1558].values\n",
+        "y = dataset.iloc[:, 1558].values\n",
+        "\n",
+        "np.unique(y, return_counts=True)\n",
+        "\n",
+        "#without atribution selection\n",
+        "naive1 = GaussianNB()\n",
+        "naive1.fit(X, y)\n",
+        "predict1 = naive1.predict(X)\n",
+        "accuracy_score(y, predict1) # 0.7813357731015553\n",
+        "\n",
+        "#Selection of atributes with Chi square\n",
+        "selection = SelectFdr(chi2, alpha=0.01)\n",
+        "new_X = selection.fit_transform(X, y)\n",
+        "\n",
+        "X.shape, new_X.shape #((3279, 1558), (3279, 433))\n",
+        "\n",
+        "selection.pvalues_, len(selection.pvalues_) #(array([2.14710304e-268, 0.00000000e+000, 8.98165813e-150, ..., 6.0335338e-042, 5.63437216e-012, 9.37945775e-002]), 1558)\n",
+        "\n",
+        "np.sum(selection.pvalues_ <= 0.01) # 476\n",
+        "\n",
+        "collumns = selection.get_support() # array([ True,  True,  True, ...,  True,  True, False])\n",
+        "\n",
+        "index = np.where(collumns == True)\n",
+        "\n",
+        "naive2 = GaussianNB()\n",
+        "naive2.fit(new_X, y)\n",
+        "predict2 = naive2.predict(new_X)\n",
+        "accuracy_score(y, predict2)\n",
+        "\n",
+        "#Selection with Anova\n",
+        "from sklearn.feature_selection import SelectFdr, f_classif\n",
+        "\n",
+        "selection = SelectFdr(f_classif, alpha = 0.01)\n",
+        "new_X_2 = selection.fit_transform(X, y)\n",
+        "\n",
+        "X.shape, new_X.shape, new_X_2.shape # ((3279, 1558), (3279, 433), (3279, 433))\n",
+        "\n",
+        "selection.pvalues_ # array([1.31095977e-005, 1.19510994e-200, 4.91337302e-016, ..., 1.35872010e-042, 3.77636040e-012, 9.35989125e-002])\n",
+        "\n",
+        "np.sum(selection.pvalues_ < 0.01) # 476\n",
+        "\n",
+        "naive3 = GaussianNB()\n",
+        "naive3.fit(new_X_2, y)\n",
+        "predict3 = naive3.predict(new_X_2)\n",
+        "accuracy_score(y, predict3) # 0.970722781335773"
+      ],
+      "metadata": {
+        "id": "gLIDVNhvsHuz"
       },
       "execution_count": null,
       "outputs": []
