--- a/Fundamentals.ipynb
+++ b/Fundamentals.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyM5pHwkapEck57GOuHSWBJ8",
+      "authorship_tag": "ABX9TyNDDf2zHVf9X/RDR2qWPqru",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5827,6 +5827,33 @@
       ],
       "metadata": {
         "id": "gLIDVNhvsHuz"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Anova\n",
+        "from scipy.stats import f\n",
+        "from scipy.stats import f_oneway\n",
+        "\n",
+        "group_a = np.array([165, 152, 143, 140, 155])\n",
+        "group_b = np.array([130, 169, 164, 143, 154])\n",
+        "group_c = np.array([163, 158, 154, 149, 156])\n",
+        "\n",
+        "f.ppf(1 - 0.05, dfn = 2, dfd = 12) # 3.8852938346523933\n",
+        "\n",
+        "_, p = f_oneway(group_a, group_b, group_c) # p = 0.7613994386091956\n",
+        "\n",
+        "alpha = 0.05\n",
+        "if p <= alpha:\n",
+        "  print('Null hypothesis rejected')\n",
+        "else:\n",
+        "  print('Alternative hypothesis rejected') # 'Alternative hypothesis rejected'"
+      ],
+      "metadata": {
+        "id": "_L5PwJ5ExB-D"
       },
       "execution_count": null,
       "outputs": []
