--- a/Fundamentals.ipynb
+++ b/Fundamentals.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNDDf2zHVf9X/RDR2qWPqru",
+      "authorship_tag": "ABX9TyMqOVAKOTnJjmHphncdexOE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5725,7 +5725,7 @@
         "id": "3ETJJKESQAjB",
         "outputId": "64e19738-6a7d-4d14-b32b-84dbc8495bce"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5835,6 +5835,7 @@
       "cell_type": "code",
       "source": [
         "#Anova\n",
+        "import numpy as np\n",
         "from scipy.stats import f\n",
         "from scipy.stats import f_oneway\n",
         "\n",
@@ -5854,6 +5855,31 @@
       ],
       "metadata": {
         "id": "_L5PwJ5ExB-D"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Tukey's test\n",
+        "import pandas as pd\n",
+        "from statsmodels.stats.multicomp import MultiComparison\n",
+        "\n",
+        "data = {'values': [70, 90, 80, 50, 20, 130, 169, 164, 143, 154, 163, 158, 154, 149, 156],\n",
+        "         'group': ['A', 'A', 'A', 'A', 'A', 'B', 'B', 'B', 'B', 'B', 'C', 'C', 'C', 'C', 'C']}\n",
+        "\n",
+        "data_pd = pd.DataFrame(data)\n",
+        "\n",
+        "compare_group = MultiComparison(data_pd['values'], data_pd['group'])\n",
+        "\n",
+        "test_data = compare_group.tukeyhsd()\n",
+        "#print(test_data)\n",
+        "\n",
+        "test_data.plot_simultaneous();"
+      ],
+      "metadata": {
+        "id": "nwsD49x4-XoJ"
       },
       "execution_count": null,
       "outputs": []
