Machine learning practice

--- a/Fundamentals.ipynb
+++ b/Fundamentals.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMqOVAKOTnJjmHphncdexOE",
+      "authorship_tag": "ABX9TyMfKz4rX9s6rB0GZnHHMjVv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5880,6 +5880,61 @@
       ],
       "metadata": {
         "id": "nwsD49x4-XoJ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Machine learning practice\n",
+        "import pandas as pd\n",
+        "from sklearn.naive_bayes import GaussianNB\n",
+        "from sklearn.linear_model import LogisticRegression\n",
+        "from sklearn.ensemble import RandomForestClassifier\n",
+        "from sklearn.model_selection import cross_val_score, KFold\n",
+        "from sklearn.preprocessing import StandardScaler\n",
+        "\n",
+        "dataset = pd.read_csv('credit_data.csv')\n",
+        "dataset.dropna(inplace=True)\n",
+        "dataset.head()\n",
+        "\n",
+        "X = dataset.iloc[:, 1:4].values\n",
+        "y = dataset.iloc[:, 4].values\n",
+        "\n",
+        "min(X[0]), max(X[0]) # (59.017015066929204, 66155.9250950813)\n",
+        "\n",
+        "scaler = StandardScaler()\n",
+        "X = scaler.fit_transform(X)\n",
+        "\n",
+        "min(X[0]), max(X[0]) # (1.2019070702053862, 1.4538977547824534)\n",
+        "\n",
+        "results_naive_cv = []\n",
+        "results_logistic_cv = []\n",
+        "results_forest_cv = []\n",
+        "for i in range(30):\n",
+        "  kfold = KFold(n_splits = 10, shuffle = True, random_state = i)\n",
+        "  \n",
+        "  naive_bayes = GaussianNB()\n",
+        "  scores = cross_val_score(naive_bayes, X, y, cv = kfold)\n",
+        "  results_naive_cv.append(scores.mean())\n",
+        "\n",
+        "  logistic = LogisticRegression()\n",
+        "  scores = cross_val_score(logistic, X, y, cv = kfold)\n",
+        "  results_logistic_cv.append(scores.mean())  \n",
+        "  \n",
+        "  random_forest = RandomForestClassifier()\n",
+        "  scores = cross_val_score(random_forest, X, y, cv = kfold)\n",
+        "  results_forest_cv.append(scores.mean())\n",
+        "\n",
+        "results_naive_cv = np.array(results_naive_cv)\n",
+        "results_logistic_cv = np.array(results_logistic_cv)\n",
+        "results_forest_cv = np.array(results_forest_cv)\n",
+        "\n",
+        "results_naive_cv.mean(), results_logistic_cv.mean(), results_forest_cv.mean() # (0.9249859296482411, 0.9457008375209381, 0.9871475711892796)"
+      ],
+      "metadata": {
+        "id": "rGRFFaxZHMDI"
       },
       "execution_count": null,
       "outputs": []
