--- a/Fundamentals.ipynb
+++ b/Fundamentals.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMfKz4rX9s6rB0GZnHHMjVv",
+      "authorship_tag": "ABX9TyNlCYBJb8FWUzffJdLt7dEV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5935,6 +5935,26 @@
       ],
       "metadata": {
         "id": "rGRFFaxZHMDI"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Shapiro-Wilk\n",
+        "from scipy.stats import shapiro\n",
+        "import seaborn as sns\n",
+        "\n",
+        "alpha = 0.05\n",
+        "shapiro(results_naive_cv), shapiro(results_logistic_cv), shapiro(results_forest_cv)\n",
+        "\n",
+        "#sns.distplot(resultados_naive_cv);\n",
+        "#sns.distplot(resultados_logistica_cv);\n",
+        "sns.distplot(resultados_forest_cv);"
+      ],
+      "metadata": {
+        "id": "36tyAM9HLZ-M"
       },
       "execution_count": null,
       "outputs": []
