--- a/Fundamentals.ipynb
+++ b/Fundamentals.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNlCYBJb8FWUzffJdLt7dEV",
+      "authorship_tag": "ABX9TyPk5Mo7RSZlgRWfzhM/ruoy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5955,6 +5955,25 @@
       ],
       "metadata": {
         "id": "36tyAM9HLZ-M"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#D'Agostinho K^2\n",
+        "from scipy.stats import normaltest\n",
+        "\n",
+        "normaltest(resultados_naive_cv), normaltest(resultados_logistica_cv), normaltest(resultados_forest_cv)\n",
+        "'''\n",
+        "(NormaltestResult(statistic=0.8391668731677201, pvalue=0.6573205784978502),\n",
+        " NormaltestResult(statistic=4.079254883823804, pvalue=0.1300771631514313),\n",
+        " NormaltestResult(statistic=1.4699206450615419, pvalue=0.479524484915436))\n",
+        "'''"
+      ],
+      "metadata": {
+        "id": "hPiIPQk_MdIG"
       },
       "execution_count": null,
       "outputs": []
