--- a/Fundamentals.ipynb
+++ b/Fundamentals.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPk5Mo7RSZlgRWfzhM/ruoy",
+      "authorship_tag": "ABX9TyMnPEj6ZixZOfUxI10x13my",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5974,6 +5974,20 @@
       ],
       "metadata": {
         "id": "hPiIPQk_MdIG"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Anderson-Darling\n",
+        "from scipy.stats import anderson\n",
+        "anderson(resultados_naive_cv).statistic, anderson(resultados_logistica_cv).statistic, anderson(resultados_forest_cv).statistic\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "LMMaiGRFNRvL"
       },
       "execution_count": null,
       "outputs": []
