Wilcoxon Signed-Rank

--- a/Fundamentals.ipynb
+++ b/Fundamentals.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMnPEj6ZixZOfUxI10x13my",
+      "authorship_tag": "ABX9TyM5fug96myRCn1WRuI1bLCT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5983,11 +5983,28 @@
       "source": [
         "#Anderson-Darling\n",
         "from scipy.stats import anderson\n",
-        "anderson(resultados_naive_cv).statistic, anderson(resultados_logistica_cv).statistic, anderson(resultados_forest_cv).statistic\n",
+        "anderson(results_naive_cv).statistic, anderson(results_logistic_cv).statistic, anderson(results_forest_cv).statistic\n",
         "\n"
       ],
       "metadata": {
         "id": "LMMaiGRFNRvL"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Wilcoxon Signed-Rank\n",
+        "from scipy.stats import wilcoxon\n",
+        "\n",
+        "alpha = 0.05\n",
+        "_, p = wilcoxon(results_naive_cv, results_logistic_cv) # 1.7333066441991056e-06\n",
+        "\n",
+        "_, p = wilcoxon(results_logistic_cv, results_forest_cv) # 1.7343976283205784e-06"
+      ],
+      "metadata": {
+        "id": "iElRi5hZO5cv"
       },
       "execution_count": null,
       "outputs": []
