ANOVA and Tukey

--- a/Fundamentals.ipynb
+++ b/Fundamentals.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyM5fug96myRCn1WRuI1bLCT",
+      "authorship_tag": "ABX9TyMhn8jJ+Xy/zrsmMsFY85TH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -6005,6 +6005,57 @@
       ],
       "metadata": {
         "id": "iElRi5hZO5cv"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Friedman test\n",
+        "from scipy.stats import friedmanchisquare\n",
+        "\n",
+        "_, p = friedmanchisquare(results_naive_cv, results_logistic_cv, results_forest_cv) # 9.357622968840163e-14"
+      ],
+      "metadata": {
+        "id": "Z9N4FA5JPfkk"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# ANOVA and Tukey\n",
+        "from scipy.stats import f_oneway\n",
+        "import pandas as pd\n",
+        "from statsmodels.stats.multicomp import MultiComparison\n",
+        "\n",
+        "_, p = f_oneway(resultados_naive_cv, resultados_logistica_cv, resultados_forest_cv) # 4.00609434130297e-117\n",
+        "\n",
+        "alpha = 0.05\n",
+        "\n",
+        "results_algorit = {'accuracy': np.concatenate([results_naive_cv, results_logistic_cv, results_forest_cv]),\n",
+        "                         'algoritmo': ['naive', 'naive','naive','naive','naive','naive','naive','naive','naive','naive',\n",
+        "                                       'naive', 'naive','naive','naive','naive','naive','naive','naive','naive','naive',\n",
+        "                                       'naive', 'naive','naive','naive','naive','naive','naive','naive','naive','naive',\n",
+        "                                       'logistic','logistic','logistic','logistic','logistic','logistic','logistic','logistic','logistic','logistic',\n",
+        "                                       'logistic','logistic','logistic','logistic','logistic','logistic','logistic','logistic','logistic','logistic',\n",
+        "                                       'logistic','logistic','logistic','logistic','logistic','logistic','logistic','logistic','logistic','logistic',\n",
+        "                                       'forest','forest','forest','forest','forest','forest','forest','forest','forest','forest',\n",
+        "                                       'forest','forest','forest','forest','forest','forest','forest','forest','forest','forest',\n",
+        "                                       'forest','forest','forest','forest','forest','forest','forest','forest','forest','forest']}\n",
+        "                      \n",
+        "results_df = pd.DataFrame(results_algorit)\n",
+        "\n",
+        "compare_groups = MultiComparison(results_df['accuracy'], results_df['algoritmo'])\n",
+        "\n",
+        "test = compare_groups.tukeyhsd()\n",
+        "\n",
+        "test.plot_simultaneous();"
+      ],
+      "metadata": {
+        "id": "5SJO2UPJQD_l"
       },
       "execution_count": null,
       "outputs": []
