--- a/Fundamentals.ipynb
+++ b/Fundamentals.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMhn8jJ+Xy/zrsmMsFY85TH",
+      "authorship_tag": "ABX9TyMG5OVPpp/sVElJLjbbMozI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -6056,6 +6056,23 @@
       ],
       "metadata": {
         "id": "5SJO2UPJQD_l"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Nemenyi test\n",
+        "results_algorit = {'naive_bayes': results_naive_cv,\n",
+        "                         'logistic': results_logistic_cv,\n",
+        "                         'random_forest': results_forest_cv}\n",
+        "\n",
+        "results_df = pd.DataFrame(results_algorit)\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "oRrckbk2RHQ6"
       },
       "execution_count": null,
       "outputs": []
